@@ -2,6 +2,7 @@ MicroEmulator
 
 - target build depends on build.properties configuration: 
     target = app | applet
+- obfuscator for applet reduces jar file at ~35% 
 
 0.3.1 (alpha) - 21.11.2002
 - device display is better customizable
